host based nginx fwding rule in ingress

--- a/landscape-setup/ingress.yaml
+++ b/landscape-setup/ingress.yaml
@@ -7,9 +7,10 @@ metadata:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   rules:
-  - http:
+  - host: mono-jenkins.com
+    http:
       paths:
-      - path: /ci
+      - path: /*
         backend:
           serviceName: helmed-jenkins
           servicePort: 8080
